# Rita

./: .gitignore  CMakeLists.txt  README.md  linesofcode.py
Other/: npp_support.xml
Rita/: CMakeLists.txt  Rita.cpp  Rita.h
Rita/Ast/: ast.h
Rita/Core/: CMakeLists.txt  bool_obj.cpp  bool_obj.hpp  data_types.hpp  func_obj.cpp  func_obj.hpp  int_obj.cpp  int_obj.hpp  list_obj.cpp  list_obj.hpp  native_function.cpp  native_function.hpp  object.cpp  object.hpp  string_obj.cpp  string_obj.hpp  type.cpp  type.h  type.hpp  types.hpp  user_object.cpp  user_object.hpp
Rita/Core/Instructions/: assignment_instruction.cpp  assignment_instruction.hpp  attribute_instruction.cpp  attribute_instruction.hpp  binop_instruction.cpp  binop_instruction.hpp  constant_bool.cpp  constant_bool.hpp  constant_float.cpp  constant_float.hpp  constant_instruction.cpp  constant_instruction.hpp  constant_int.cpp  constant_int.hpp  constant_list.cpp  constant_list.hpp  constant_string.cpp  constant_string.hpp  constants_types.hpp  function_call_instruction.cpp  function_call_instruction.hpp  function_definition.cpp  function_definition.hpp  if_instruction.cpp  if_instruction.hpp  index_instruction.cpp  index_instruction.hpp  instruction.cpp  instruction.hpp  instructions_types.cpp  instructions_types.hpp  leaf.cpp  leaf.hpp  module_instruction.cpp  module_instruction.hpp  op_type.cpp  op_type.hpp  return_instruction.cpp  return_instruction.hpp  unop_instruction.cpp  (+5 more)
Rita/Executor/: CMakeLists.txt  engine.cpp  engine.hpp  enviropment.cpp  enviropment.hpp  enviropment_type.hpp
Rita/Executor/Builtins/: constants.hpp  functions.cpp  functions.hpp  types.hpp
Rita/Instructions/: assignment_instruction.cpp  assignment_instruction.hpp  ast.h  binop_instruction.hpp  if_instruction.cpp  instruction.hpp  instruction_type.hpp  instructions_types.hpp  leaf.cpp  leaf.hpp  op_type.hpp  while_instruction.cpp
Rita/Interpreter/: CMakeLists.txt  interpreter.cpp  interpreter.hpp  main.cpp
Rita/Lexer/: CMakeLists.txt  lexer.cpp  lexer.h  lexer.hpp  token.cpp  token.h  token.hpp  token_types.cpp  token_types.h  token_types.hpp  tokenator.cpp  tokenator.h  tokenator.hpp
Rita/Lexer/Constants/: keywords.hpp
Rita/Parser/: CMakeLists.txt  blyat.h  foo.cpp  foo.h  parser.cpp  parser.h  parser.hpp
Rita/Utils/: CMakeLists.txt  ast_printer.cpp  ast_printer.hpp  rita_exception.cpp  rita_exception.hpp
examples/: discriminant.rt  fib.rt  functions.rt  math.rt  string.rt
